# haskell-json-rpc-generic

./: .hgtags  .travis.yml  json-rpc-generic.cabal
.github/workflows/: cabal-v1.yml
src/Data/: JsonRpc.hs
src/Data/JsonRpc/: Failure.hs  Generic.hs  Id.hs  Instances.hs  Integral.hs  Request.hs  Response.hs  Success.hs
test/: Eq.hs  Instances.hs  Iso.hs  equal.hs  testMain.hs
