name:                json-rpc-generic
version:             0.0.1.0
-- synopsis:
-- description:
homepage:            http://github.com/khibino/haskell-json-rpc-generic
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2016 Kei Hibino
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
                       Data.JsonRpc.Id
                       Data.JsonRpc.Request
                       Data.JsonRpc.Success
                       Data.JsonRpc.Failure
                       Data.JsonRpc.Response
                       Data.JsonRpc.Generic
                       Data.JsonRpc.Instances
  -- other-modules:
  other-extensions:
                       TypeOperators
                       FlexibleContexts
                       OverloadedStrings
                       DeriveFunctor
                       DeriveFoldable
                       DeriveTraversable
                       DeriveGeneric
                       StandaloneDeriving

  build-depends:         base >=4.6 && <5
                       , transformers
                       , bytestring >=0.10
                       , text
                       , scientific
                       , vector >=0.10
                       , aeson >=0.7

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite equalTest
  main-is:             equal.hs
  build-depends:         base <5
                       , aeson
                       , json-rpc-generic
                       , quickcheck-simple
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  default-language:    Haskell2010
